# streamlit_app

./: .gitignore  encoder.py  ex_templ.html  js.py  output.html  pyproject.toml  resize.py  streamlite_html.py  styles.py  template.html  test.html  test.py  test2.py  utils.py
app/: github_hook.py  hint.json  index.html  key_val_map.py  link.txt  map.json  pages.py  serv.py  serv_fastapi.py  streamlite_html.py  styles.py  template.html  utils.py
app/streamlit_app/: js.py  link.txt  utils.py
app/streamlit_app/logo/: tg.py
logo/: tg.py
