[tool.poetry]
name = "property-list-render"
version = "0.1.0"
description = ""
authors = ["Leonid Sliusar <loslyusar@gmail.com>"]
readme = "README.md"
packages = [{include = "property_list_render"}]

[tool.poetry.dependencies]
python = "^3.11"
weasyprint = "^59.0"
beautifulsoup4 = "^4.12.2"
streamlit = "1.25.0"
ipywidgets = "^8.0.7"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
