[tool.poetry]
name = "property-list-render"
version = "0.1.0"
description = ""
authors = ["Leonid Sliusar <loslyusar@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
weasyprint = "^59.0"
beautifulsoup4 = "^4.12.2"
streamlit = "1.25.0"
ipywidgets = "^8.0.7"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
streamlit-ace = "^0.1.1"
gitpython = "3.1.32"
pygithub = "^1.59.0"
python-dotenv = "^1.0.0"
streamlit-sortables = "^0.2.0"
streamlit-image-select = "^0.6.0"
streamlit-elements = "^0.1.0"
streamlit-lottie = "^0.0.5"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.streamlit]
enableStaticServing = true